Closed Bug 207327 Opened 22 years ago Closed 19 years ago

@mozilla.org/js/jsd/app-start-observer;2 isn't registering itself correctly as an app-startup observer service

Categories

(Other Applications Graveyard :: Venkman JS Debugger, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: neil)

Details

(Keywords: assertion)

Attachments

(3 files, 1 obsolete file)

[This is a cookie cutter bug] http://lxr.mozilla.org/seamonkey/source/embedding/components/appstartup/src/nsIAppStartupNotifier.h#53 53 We will have a category called "app-startup" which components register 54 themselves in using the CategoryManager. 55 56 Components can also (optionally) add the word "service," as a prefix 57 to the "value" they pass in during a call to AddCategoryEntry() as {2fd6b7f6-eb8c-4f32-ad26-113f2c02d0fe},@mozilla.org/js/jsd/app-start-observer;2,,JSDASObserver,rel:jsd3250.dll Does not include this optional prefix and therefore causes xpcom to get a bit upset. WARNING: Creation of "{2fd6b7f6-eb8c-4f32-ad26-113f2c02d0fe}" in progress (Reentrant GS - see bug 194568), file i:/build/mozilla/xpcom/components/nsComponentManager.cpp, line 1899 nsComponentManagerImpl::AddPendingCID(const nsID & {...}) line 1900 nsComponentManagerImpl::GetServiceByContractID(nsComponentManagerImpl * const 0x0043dc14, const char * 0x00fd4188, const nsID & {...}, void * * 0x0012fb64) line 2457 + 15 bytes nsGetServiceByContractID::operator()(const nsID & {...}, void * * 0x0012fb64) line 121 + 38 bytes nsCOMPtr_base::assign_from_helper(const nsCOMPtr_helper & {...}, const nsID & {...}) line 81 + 18 bytes nsCOMPtr<nsISupports>::nsCOMPtr<nsISupports>(const nsCOMPtr_helper & {...}) line 820 NS_CreateServicesFromCategory(const char * 0x002e9434, nsISupports * 0x00000000, const char * 0x002e942c) line 504 + 37 bytes nsComponentManagerImpl::AutoRegisterImpl(int 0, nsIFile * 0x00000000, int 1) line 3247 + 17 bytes nsComponentManagerImpl::AutoRegister(nsComponentManagerImpl * const 0x0043dc18, nsIFile * 0x00000000) line 3462 + 19 bytes main1(int 1, char * * 0x004443d0, nsISupports * 0x0102dc18) line 1093 WARNING: You are calling CreateInstance "@mozilla.org/js/jsd/app-start-observer;2" when a service for this CID already e xists!, file i:/build/mozilla/xpcom/components/nsComponentManager.cpp, line 2039 nsComponentManagerImpl::CreateInstanceByContractID(nsComponentManagerImpl * const 0x0043e010, const char * 0x010990c8, nsISupports * 0x00000000, const nsID & {...}, void * * 0x0012fbbc) line 2039 nsCreateInstanceByContractID::operator()(const nsID & {...}, void * * 0x0012fbbc) line 76 + 45 bytes nsCOMPtr<nsIObserver>::assign_from_helper(const nsCOMPtr_helper & {...}, const nsID & {...}) line 988 + 18 bytes nsCOMPtr<nsIObserver>::operator=(const nsCOMPtr_helper & {...}) line 611 nsAppStartupNotifier::Observe(nsAppStartupNotifier * const 0x00fd45c0, nsISupports * 0x00000000, const char * 0x00419ae4, const unsigned short * 0x00000000) line 103 main1(int 1, char * * 0x004443d0, nsISupports * 0x00fd4448) line 1106
Attached patch fix registrationSplinter Review
Attachment #124372 - Flags: review?(rginda)
Comment on attachment 124372 [details] [diff] [review] fix registration r=rginda
Attachment #124372 - Flags: review?(rginda) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verify checked in
Status: RESOLVED → VERIFIED
Product: Core → Other Applications
Wrong string, I'm afraid - the service, belongs at the start of the contract.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Attached patch Backout plus fixSplinter Review
Attached patch Minimal fix (obsolete) — Splinter Review
Attachment #205821 - Flags: superreview?(bzbarsky)
Attachment #205821 - Flags: review+
Attachment #205821 - Flags: superreview?(bzbarsky) → superreview+
Should there be an approval-1.8.1 flag for me to set here?
Assignee: timeless → neil
Attachment #205821 - Attachment is obsolete: true
Status: REOPENED → ASSIGNED
Fix checked in to the trunk.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago19 years ago
Resolution: --- → FIXED
Product: Other Applications → Other Applications Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: