Bug 207327 @mozilla.org/js/jsd/app-start-observer;2 isn't registering itself correctly as an app-startup observer service r=rginda